--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shopmate",
   "version": "1.0.0",
-  "description": "",
+  "description": "An e-commerce app",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
